tests-integration/fixtures/checking/1772565240_derive_bifunctor_missing_functor/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
WrapBoth ::
  forall (t :: Type) (t1 :: Type) (@f :: (t :: Type) -> Type) (@g :: (t1 :: Type) -> Type)
    (@a :: (t :: Type)) (@b :: (t1 :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    (g :: (t1 :: Type) -> Type) (b :: (t1 :: Type)) ->
    WrapBoth @(t :: Type) @(t1 :: Type)
      (f :: (t :: Type) -> Type)
      (g :: (t1 :: Type) -> Type)
      (a :: (t :: Type))
      (b :: (t1 :: Type))

Types
WrapBoth ::
  forall (t :: Type) (t1 :: Type).
    ((t :: Type) -> Type) -> ((t1 :: Type) -> Type) -> (t :: Type) -> (t1 :: Type) -> Type

Derived
derive forall (t :: Type -> Type) (t1 :: Type -> Type).
  Bifunctor (WrapBoth @Type @Type (t :: Type -> Type) (t1 :: Type -> Type))

Roles
WrapBoth = [Representational, Representational, Nominal, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (t :: Type -> Type)
  --> 6:1..6:41
  |
6 | derive instance Bifunctor (WrapBoth f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Functor (t1 :: Type -> Type)
  --> 6:1..6:41
  |
6 | derive instance Bifunctor (WrapBoth f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
